bad/assign_field_bool_arr_elem_int.example_compiler_output
ERROR
[1mbad/assign_field_bool_arr_elem_int.lat:7:20: [1;31merror: [0;1massigning to `boolean` from incompatible type `int`[m
	(new C[1])[2].fld = 42;
	                  [1;32m^[m
